--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="nav-wrapper">
     <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    <a href="#" class="brand-logo">Logo</a>
+    <a href="#" class="brand-logo">absApp</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a (click)="navPosts()">Posts</a></li>
       <li><a (click)="navAlbums()">Albums</a></li>
