--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,5 +1,9 @@
 <app-landing> </app-landing>
 
+
+<div class="center">
+  <h3> Posts </h3></div>
+
 <div class="row ">
   <div class="col s12 m3 l3" *ngFor="let p of posts">
     <div class="card small" >
