--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,5 +1,9 @@
 <app-landing></app-landing>
 
+
+<div class="center">
+  <h3> Users </h3></div>
+
 <ul class="collection" *ngFor="let u of users" >
   <li class="collection-item avatar">
     <img src="assets/user.png" alt="" class="circle">
